@@ -2,6 +2,7 @@
 =====
 
 2009-05-06
+ * getMinFlatHeigh, min_flat_heigh
  * improvements of rts2-simbadinfo, added manual page
 
 2009-05-04
